DEMO/WIP: qt a11y: Add mapping to Qt relation types added in Qt 6.5

Map `AccessibleRelationType::CONTENT_FLOWS_FROM`,
`AccessibleRelationType::CONTENT_FLOWS_TO` and
`AccessibleRelationType::DESCRIBED_BY` to their
(hopefully soon newly available ...) Qt
equivalents.

TODO/NOTE: This just a demo for now,
will submit a Qt change to suggest actually adding
those types, since they don't exist in Qt yet,
s. https://bugreports.qt.io/browse/QTBUG-105864

For example the Orca screen reader on Linux makes
use of the FlOWS_FROM and FLOWS_TO relations.
So far, when using the qt6 VCL plugin with Orca
running, moving focus to a Writer paragraph resulted
in these warnings being emitted:

    warn:vcl.qt:220606:220606:vcl/qt6/../qt5/QtAccessibleWidget.cxx:218: Unmatched relation: 1
    warn:vcl.qt:220606:220606:vcl/qt6/../qt5/QtAccessibleWidget.cxx:218: Unmatched relation: 2

and thus Orca not being able to make use of those relations.

TODO: submit Qt change, update this change as needed
once the Qt change has been discussed/handled

Change-Id: I6e5d78fb26f62a6f1745d4f94647e8dc0fe2abfd